--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <button onclick="location.href='https://lingayen.github.io/01/'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Region 1 | Lingayen, Pangasinan | JANUARY 27-29 , 2022</button>
                 </div>
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='https://lingayen.github.io/02/'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">CFO CENTRAL (Test) </button>
+                    <button onclick="location.href='https://rey5209.github.io/inc/'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">CFO CENTRAL (Test) </button>
                 </div>
                 <div style="padding-bottom: 30px;">
                     <button onclick="location.href='pnk/index.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">KADA UMAGA December 13-20</button>
